propellor (5.3.3) UNRELEASED; urgency=medium

  * Warn again about new upstream version when ~/.propellor was cloned from the
    Debian git bundle using an older version of propellor that set up an
    upstream remote.

 -- Joey Hess <id@joeyh.name>  Mon, 19 Feb 2018 12:44:24 -0400

propellor (5.3.2) unstable; urgency=medium

  * Added Propellor.Property.Atomic, which can make a non-atomic property
    that operates on a directory into an atomic property.
    (Inspired by Vaibhav Sagar's talk on Functional Devops in a
    Dysfunctional World at LCA 2018.)
  * Added Git.pulled.
  * Systemd.machined: Install systemd-container on Debian
    stretch.
    Thanks, Sean Whitton

 -- Joey Hess <id@joeyh.name>  Sun, 18 Feb 2018 14:31:39 -0400

propellor (5.3.1) unstable; urgency=medium

  * Last release mistakenly contained my personal branch not master.
  * contrib/post-merge-hook documentation updated to recommend also using
    it as a post-checkout hook, to avoid such problems.

 -- Joey Hess <id@joeyh.name>  Sun, 04 Feb 2018 12:00:03 -0400

propellor (5.3.0) unstable; urgency=medium

  * Avoid bogus warning about new upstream version when /usr/bin/propellor
    is run on a Debian system, but ~/.propellor was not cloned from the
    Debian git bundle.
  * Parted: Allow partitions to have no filesystem, for eg, GPT BIOS boot
    partitions. (API change)
  * Added rawPartition to PartSpec, for specifying partitions with no
    filesystem.
  * Added BiosGrubFlag to PartFlag.
  * Add HasCallStack constraint to pickOS and unsupportedOS, so the
    call stack includes the caller.
  * Run su with --login, to avoid inheriting some problematic environment
    variables, such as TMP, from the caller.
  * Grub: Added properties to configure /etc/default/grub.
  * Laptop: New module, starting with powertopAutoTuneOnBoot.

 -- Joey Hess <id@joeyh.name>  Thu, 01 Feb 2018 12:27:01 -0400

propellor (5.2.0) unstable; urgency=medium

  [ Joey Hess ]